Fixed more medium layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -639,6 +639,8 @@ footer img.footer-logo {
 		line-height: 1.5em;
 		text-align: left;
 	}
+
+	
 }
 
 /* Medium only */
@@ -701,6 +703,36 @@ footer img.footer-logo {
 		font-size: 1.2em;
 	}
 	/*end mobile menu*/
+
+	/*SECTIONS*/
+	/*section1*/
+	#section1 {
+		padding: 150px 0 100px;
+		position: relative;
+	}
+	#section1 h3.tagline {
+		margin: 0;
+		color: #52489C;
+		font-size: 2.8em;
+		font-family: 'Montserrat', sans-serif
+	}
+	#section1 p {
+		margin: 0 0 20px;
+		font-size: 1.2em;
+		line-height: 1.5em;
+		text-align: right;
+	}
+
+	/*processes*/
+	.processes .process-text h3 {
+		font-size: 2em;
+		font-family: 'Montserrat', sans-serif;
+		margin: 20px 0 10px;
+	}
+	.processes .process-text p {
+		font-size: 1.1em;
+		line-height: 1.5em;
+	}
 }
 
 /* Large and up */
